3-apps/nextcloud/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nextcloud.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
    - match: Host(`nextcloud.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
